# git-credential-kwallet

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: Findhelp2man.cmake
man/: CMakeLists.txt
src/: CMakeLists.txt  Credential.cpp  Credential.hpp  debug.cpp  debug.hpp  main.cpp  version.h.in
